@@ -89,6 +89,21 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-server</artifactId>
+      <version>3.7.4-YTDB-20250618.095831-3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-driver</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>fluent-hc</artifactId>
       <version>4.5.14</version>
@@ -105,6 +120,7 @@
       <properties>
         <argLine>
           -ea
+          -Xms${heapSize}
           -Xmx${heapSize}
           -Dyoutrackdb.storage.diskCache.bufferSize=4096
           -Dyoutrackdb.security.userPasswordSaltIterations=10
@@ -115,6 +131,7 @@
           -Dyoutrackdb.file.log.deletion=false
           --add-opens jdk.unsupported/sun.misc=ALL-UNNAMED
           --add-opens java.base/sun.security.x509=ALL-UNNAMED
+          --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
         </argLine>
       </properties>
     </profile>
@@ -212,6 +229,7 @@
         <configuration>
           <systemPropertyVariables>
             <buildDirectory>${project.build.directory}</buildDirectory>
+            <build.dir>${project.build.directory}</build.dir>
           </systemPropertyVariables>
           <excludes>
             <exclude>${exclude.test.1}</exclude>
